# trade-test

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  01_ARCHITECTURE_OVERVIEW.md  03_DATA_PIPELINE_AND_VALIDATION.md  04_INDICATORS_LIBRARY.md  08_SIGNAL_SCORING_AND_QUEUE.md  09_EXECUTION_AND_COSTS.md  10_BACKTEST_ENGINE.md  AGENT3_IMPLEMENTATION_SUMMARY.md  AGENT_1_IMPLEMENTATION_SUMMARY.md  AGENT_2_COMPLETION_SUMMARY.md  AGENT_4_IMPLEMENTATION.md  AGENT_4_SUMMARY.md  AGENT_FIXES_AND_RECOMMENDATIONS.md  AGENT_IMPROVEMENTS_ROADMAP.md  AGENT_TASKS_PHASE1_MVP.md  AGENT_TASKS_PHASE3_TRACKING_PART2.md  AWS_EC2_DEPLOYMENT.md  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_INTEGRATION_README.md  DASHBOARD_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_RECOMMENDATION.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_TOOLS_SETUP.md  DOCKER_DEBUGGING.md  DOCKER_PRECOMMIT.md  DOCKER_SETUP.md  DOCUMENTATION.md  Deployment.md  Dockerfile  Dockerfile.mcp  ENVIRONMENT_ISSUE.md  ERROR_CODE_REFERENCE.md  FAQ.md  (+44 more)
.benchmarks/: .gitkeep
.github/workflows/: ci.yml  lint.yml
.streamlit/: config.toml
EXAMPLE_CONFIGS/: README.md  crypto_config.yaml  equity_config.yaml  factor_config.yaml  mean_reversion_config.yaml  multi_timeframe_config.yaml  pairs_config.yaml  run_config.yaml
agent-files/: 00_README_AGENT_PACK.md  01_ARCHITECTURE_OVERVIEW.md  02_CONFIGS_AND_PARAMETERS.md  03_DATA_PIPELINE_AND_VALIDATION.md  04_INDICATORS_LIBRARY.md  05_PORTFOLIO_AND_RISK.md  06_STRATEGY_EQUITY.md  07_STRATEGY_CRYPTO.md  08_SIGNAL_SCORING_AND_QUEUE.md  09_EXECUTION_AND_COSTS.md  10_BACKTEST_ENGINE.md  11_WALK_FORWARD_SPLITS_AND_PREREG.md  12_VALIDATION_SUITE.md  13_METRICS_AND_GO_NO_GO.md  14_TESTING_PLAN_UNIT_AND_INTEGRATION.md  15_CLI_COMMANDS.md  AGENT_IMPROVEMENTS_ROADMAP.md  AGENT_PROMPTS.md  AGENT_TASKS_PHASE2_NEWS.md  AGENT_TASKS_PHASE3_TRACKING_PART1.md  AGENT_TASKS_PHASE4_ML_PART1.md  AGENT_TASKS_PHASE4_ML_PART2.md  AGENT_TASKS_PHASE5_DASHBOARD_PART1.md  ALGORITHMS_PSEUDOCODE.md  CODE_CLEANUP_COMPLETION_GUIDE.md  CODE_CLEANUP_SUMMARY.md  COMPLETE_SYSTEM_VISION.md  DATA_LOADING_SPEC.md  DATA_STRUCTURES.md  DOCUMENTATION_REVIEW.md  EDGE_CASES.md  FIXES_APPLIED.md  IMPLEMENTATION_READY.md  IMPLEMENTATION_REVIEW.md  MASTER_FILE.md  MVP_READINESS_ASSESSMENT.md  NEXT_STEPS.md  PHASE3_TRACKING_COMPLETION_STATUS.md  PHASE4_ML_COMPLETION_STATUS.md  PORTFOLIO_STATE_MACHINE.md  (+10 more)
config_backups/20260104_223319/: test_config.yaml
configs/: README.md  backtest_config_production.yaml  backtest_config_with_sentiment.yaml  bucket_a_safe_sp.yaml  bucket_b_topcat_crypto.yaml  comparison_baseline.yaml  comparison_optimized.yaml  comparison_optimized_ml.yaml  equity_optimized_v1.yaml  equity_strategy_production.yaml  equity_strategy_with_ml.yaml  equity_strategy_with_sentiment.yaml  optimized_with_ml_collection.yaml  optimized_with_ml_enabled.yaml  production_crypto_config.yaml  production_equity_config.yaml  production_run_config.yaml  run_config_test.yaml  sample_equity_config.yaml  sample_run_config.yaml  test_backtest_config.yaml  test_crypto_strategy.yaml  test_equity_strategy.yaml
configs/experiments/: backtest_exp1.yaml  backtest_exp2.yaml  backtest_exp3.yaml  (+9 more)
dashboard/: optimization_manager.py
docs/: CANONICAL_CONTRACTS.md  EMAIL_SETUP_GUIDE.md  ML_INTEGRATION_GUIDE.md  N8N_INTEGRATION.md  NEWS_API_SETUP.md  PERFORMANCE_CHARACTERISTICS.md  README.md  conf.py  index.rst  make.bat
examples/: README.md  all_strategies_example.py  basic_backtest.py  custom_strategy.py  ml_strategy_development.py  ml_workflow.py  quick_ml_strategy.py  quick_start_example.py  sensitivity_analysis.py  validation_suite.py
mcp_server/: README.md  __init__.py  server.py
optimization_results/: strategy_opt_20260106_002443.json  strategy_opt_20260106_002443_config.yaml  strategy_opt_20260106_004219.json  strategy_opt_20260106_004219_config.yaml  strategy_opt_20260106_105736.json  strategy_opt_20260106_105736_config.yaml  strategy_opt_20260106_110000.json  strategy_opt_20260106_110000_config.yaml  strategy_opt_20260107_213339.json  strategy_opt_20260107_213339_config.yaml
scripts/: README.md  analyze_strategy.py  continuous_learning_cron.sh  coverage_report.sh  create_production_baseline.py  create_test_benchmarks.py  daily_workflow.py  debug_integration_tests.sh  download_data.py  download_real_market_data.py  generate_daily_signals.py  git-commit-with-hooks.sh  install_streamlit.sh  ml_continuous_learning.py  ml_training_pipeline.py  monthly_report.py  optimize_strategy.py  overnight_optimization.py  run_dashboard.sh  run_integration_tests.sh  run_optimization_crypto.sh  run_optimization_equity.sh  run_overnight.sh  run_precommit_docker.sh  run_unit_tests.sh  run_validation_suite.sh  setup_environment.sh  setup_mcp_server.sh  setup_precommit_hooks.sh  strategy_comparison.py  test_mcp_server.sh  test_news_signal.py  update_dependencies.py  verify_env_vars.py  verify_indicator_performance.py  walk_forward_automation.py
tests/: __init__.py  test_adapters.py  test_alpha_vantage_news.py  test_backtest_engine.py  test_benchmark_returns.py  test_binance_client.py  test_cli.py  test_config_migration.py  test_config_template_generator.py  test_config_validation.py  test_crypto_strategy.py  test_dashboard_config.py  test_data_calendar.py  test_data_loading.py  test_data_pipeline.py  test_data_pipeline_cache.py  test_data_sources_cache.py  test_edge_cases.py  test_equity_strategy.py  test_error_paths.py  test_execution.py  test_execution_borrow_costs.py  test_execution_weekly_return.py  test_factor_strategy.py  test_fuzz.py  test_indicators.py  test_live_data_fetcher.py  test_manual_trades.py  test_massive_client.py  test_mean_reversion.py  test_missing_data_handling.py  test_ml_ensemble.py  test_ml_features.py  test_ml_integration.py  test_ml_refinement_config.py  test_ml_refinement_extractors.py  test_ml_refinement_feature_db.py  test_ml_refinement_models.py  test_ml_refinement_pipeline.py  test_ml_training_pipeline.py  (+33 more)
trading_system/: __init__.py  __main__.py  cli.py  exceptions.py
(+851 files in other folders)
